--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python = "^3.11.0"
 pyyaml = "^6.0.2"
 docopt = "^0.6.2"
 pydantic = "^2.10.4"
+pre-commit = "^4.5.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "22.12.0"
